--- a/Company.API/Company.API.csproj
+++ b/Company.API/Company.API.csproj
@@ -5,6 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="9.0.0" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="Google.Cloud.Storage.V1" Version="3.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
@@ -12,7 +16,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Messages\Messages.csproj" />
+      <ProjectReference Include="..\EventBus\EventBus.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="kickstarter-storage-279220-2a1ace2f557a.json">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
     </ItemGroup>
 
 
