--- a/Comment.API/Properties/launchSettings.json
+++ b/Comment.API/Properties/launchSettings.json
@@ -4,20 +4,24 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:27904",
-      "sslPort": 44300
+      "applicationUrl": "http://localhost:53361",
+      "sslPort": 44380
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ApiGateway": {
+    "Comment.API": {
       "commandName": "Project",
-      "applicationUrl": "https://localhost:4001;http://localhost:4000",
+      "launchBrowser": true,
+      "launchUrl": "weatherforecast",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
