--- a/Funding.API/Properties/launchSettings.json
+++ b/Funding.API/Properties/launchSettings.json
@@ -4,20 +4,24 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:27904",
-      "sslPort": 44300
+      "applicationUrl": "http://localhost:60725",
+      "sslPort": 44391
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ApiGateway": {
+    "FundingAPI": {
       "commandName": "Project",
-      "applicationUrl": "https://localhost:4001;http://localhost:4000",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:5401;http://localhost:5400",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
