fix: change bus, rename context
send to bus publish, rename CompanyContext to StoryContext

--- a/Company.API/appsettings.json
+++ b/Company.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CompanyDB": "Server=(localdb)\\mssqllocaldb;Database=CompanyDB;Trusted_Connection=True;MultipleActiveResultSets=true; User Id=123456; Password=123456"
+    "CompanyDB": "Server=(localdb)\\mssqllocaldb;Database=CompanyDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "GoogleCredentialFile": "kickstarter-storage-279220-2a1ace2f557a.json",
   "GoogleCloudStorageBucket": "kickstarter_bucket"
