--- a/Company.API/Company.API.csproj
+++ b/Company.API/Company.API.csproj
@@ -8,7 +8,10 @@
       <PackageReference Include="AutoMapper" Version="9.0.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Google.Cloud.Storage.V1" Version="3.1.0" />
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
+      <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.5" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
