fix: update libs, add health checker

--- a/MailService/MailService.csproj
+++ b/MailService/MailService.csproj
@@ -5,10 +5,13 @@
     <UserSecretsId>bf8a3577-e452-40c0-97bd-98dea7253a96</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MailKit" Version="2.6.0" />
+    <PackageReference Include="MailKit" Version="2.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.0" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="Pages\Emails\_ViewStart.cshtml">
