--- a/MailService/Properties/launchSettings.json
+++ b/MailService/Properties/launchSettings.json
@@ -10,12 +10,16 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:15672/#/queues/%2F/MailService",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "MailService": {
       "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:15672/#/queues/%2F/MailService",
       "applicationUrl": "https://localhost:5301;http://localhost:5300",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
