--- a/ApiGateway/Properties/launchSettings.json
+++ b/ApiGateway/Properties/launchSettings.json
@@ -11,13 +11,17 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "ApiGateway": {
       "commandName": "Project",
-      "applicationUrl": "https://localhost:4001;http://localhost:4000",
+      "launchBrowser": true,
+      "launchUrl": "",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
